--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -162,6 +162,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 4201
+          },
           "configurations": {
             "production": {
               "buildTarget": "landing:build:production"
